= Changelog
:toc: macro
:link-repository: https://github.com/d4l-data4life/hc-result-sdk-kmp
:toclevels: 1
:toc-title:

All notable changes to this project will be documented in this file.

The format is based on http://keepachangelog.com/en/1.0.0/[Keep a Changelog]
and this project adheres to http://semver.org/spec/v2.0.0.html[Semantic Versioning].

[discrete]
==== Versions
toc::[]

== link:{link-repository}/releases/latest[Unreleased]
See link:{link-repository}/compare/v0.1.1...main[changeset]

=== Added

=== Changed

=== Deprecated

=== Removed

=== Fixed

=== Security

=== Bumped

=== Migration


== link:{link-repository}/releases/tag/v0.1.1[0.1.1]

=== Fixed

* freeze items and errors for the Flow, to resolves iOS crashes.

== link:{link-repository}/releases/tag/v0.1.0[0.1.0]

=== Added

Initial release.

* `D4LSDKFlow` wrapper for all platforms
* `D4LRuntimeException` as base runtime error for kmp sdks
* `D4LException` as base error for kmp sdks

=== Changed

=== Removed

=== Fixed

=== Bumped

=== Migration