@@ -55,7 +55,6 @@ object Dependency {
         val d4l = D4L
 
         object D4L {
-            const val sdkUtil = "care.data4life.hc-util-sdk-kmp:util:${Version.sdkUtil}"
             const val sdkObjcUtil = "care.data4life.hc-objc-util-sdk-kmp:objc-util:${Version.sdkObjcUtil}"
             const val sdkTestUtilCoroutine = "care.data4life.hc-test-util-sdk-kmp:test-util-coroutine:${Version.sdkTestUtilCoroutine}"
         }
