@@ -24,14 +24,12 @@ object Repository {
 
     val github = listOf(
         // GitHub organization, GitHub repository name, Maven dependency group
-        listOf(gitHubOrgD4l, "hc-util-sdk-kmp", "care.data4life.hc-util-sdk-kmp"),
         listOf(gitHubOrgD4l, "hc-objc-util-sdk-kmp", "care.data4life.hc-objc-util-sdk-kmp"),
         listOf(gitHubOrgD4l, "hc-test-util-sdk-kmp", "care.data4life.hc-test-util-sdk-kmp")
     )
 
     val d4l = listOf(
         // Maven dependency group
-        "care.data4life.hc-util-sdk-kmp",
         "care.data4life.hc-objc-util-sdk-kmp",
         "care.data4life.hc-test-util-sdk-kmp"
     )
